[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getmem-ai"
version = "0.1.1"
description = "Persistent memory API for AI agents — getmem.ai"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "getmem.ai", email = "hello@getmem.ai"}]
keywords = ["ai", "memory", "agents", "llm", "rag", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://getmem.ai"
Documentation = "https://getmem.ai"
Repository = "https://github.com/getmem-ai/getmem"
